Add a files preview for the selected collector in CreateProjectDialog